--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <link rel="stylesheet" type="text/css"
+      href="resources/vendor/semantic.min.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
   </body>
