Remove <hello-world>; add <reddit>.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             .then(null, console.error.bind(console));
     </script>
 
-    <hello-world></hello-world>
+    <reddit></reddit>
   </body>
 </html>
